Fixes spacing on all devices (DT-1314)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1900,9 +1900,7 @@ select, input[type=search] {
 
 
 .ecom-product-long-description {
-  @media @tablet {
-    margin: 1em 0;
-  }
+  margin: 1em 0;
 }
 
 
